...
  const cancel = async () => {
    state.setEditing(false);
    RichTextRef?.current?.setContentHTML("");
  };

  return (
    <View testID="btn-submit-chat" style={styles.container}>
      {state.editing ? (
        <View style={styles.editCtn}>
          <TouchableOpacity
            testID="edit-close-btn"
            style={styles.button}
            onPress={cancel}>
...
