...
              </TouchableOpacity>
              <SizedBox width={10} />
            </>
          )}
          {boardManagement && (
            <>
              <TouchableOpacity testID="vote-icon" onPress={onCreateVoting}>
                <ChartSquareIcon width={32} height={32} />
              </TouchableOpacity>
              <SizedBox width={10} />
            </>
          )}
          <TouchableOpacity onPress={showRichToolbar}>
...
