...
            <SizedBox height={16} />
            <MarkTitleIcon />
          </View>
          <SizedBox width={16} />
          <MUITextInput
            testID="name-input"
            label="Tên kênh *"
            keyboardType={"default"}
            value={state.name}
            onChangeText={text => {
              state.setName(text);
            }}
            multiline
...
            <SizedBox height={16} />
            <ParagraphIcon width={24} height={24} />
          </View>
          <SizedBox width={16} />
          <MUITextInput
            testID="description-input"
            label="Mô tả"
            keyboardType={"default"}
            value={state.description}
            onChangeText={text => {
              state.setDescription(text);
            }}
            multiline
...
