...
                  {
                    color: Color.red,
                    fontWeight: "500",
                    fontSize: FontSize.large,
                  },
                ]}>
                Tạo kênh mới
              </Text>
            </View>
          </TouchableOpacity>
        )}

        {!channels || channels.length === 0 ? (
...
